Changed WebScraper to accept a txt file containing a list of URLs from Liquor.com

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ env/
 ##########################
 training_checkpoints/
 
+# URLs to Tasty Looking Recipes #
+################################
+RecipesToAdd.txt
+
 # Twitter API Keys #
 ####################
 Twitter API Keys.txt
