--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ grpcio==1.31.0
 h5py==2.10.0
 idna==2.10
 importlib-metadata==1.7.0
+Keras==2.4.3
 Keras-Preprocessing==1.1.2
 Markdown==3.2.2
 mccabe==0.6.1
@@ -25,6 +26,7 @@ pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pyflakes==2.2.0
 PySocks==1.7.1
+PyYAML==5.3.1
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
@@ -37,6 +39,7 @@ tensorflow-gpu==2.3.0
 tensorflow-gpu-estimator==2.3.0
 termcolor==1.1.0
 tweepy==3.9.0
+Unidecode==1.1.1
 urllib3==1.25.10
 Werkzeug==1.0.1
 wrapt==1.12.1
